# tara_camera_driver

./: CMakeLists.txt  README.txt  TODO.txt  opencv_camera_nodelet.xml  package.xml
calib/: calib_left.yml  calib_right.yml  extrinsics.yml  intrinsics.yml
cfg/: taraCamera.cfg
launch/: camera.launch  camera2.launch  exposuretests.launch  imu.launch  left.yaml  right.yaml  tara.launch
src/: AHRS.cpp  AHRS.hpp  CameraDevice.cpp  CameraDevice.h  ImuDevice.cpp  ImuDevice.hpp  standalone.cpp  tara_camera_driver.cpp  tara_camera_driver.h  tara_camera_node.cpp  tara_camera_nodelet.cpp  tara_camera_tester.cpp  tara_imu_driver.cpp  tara_imu_driver.h  tara_imu_node.cpp
src/tara/: Tara.cpp  Tara.h  tara.cc  tara.h  xunit_lib_tara.cpp  xunit_lib_tara.h
